<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@+id/nav_files">

    <fragment
        android:id="@+id/nav_files"
        android:name="com.example.skysave.main.Files"
        android:label="@string/files_title"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.skysave.main.Trash"
        android:label="@string/trash_title"
        tools:layout="@layout/fragment_trash" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.skysave.main.Profile"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />
</navigation>