<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/pathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/file_explorer_current_path"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_to_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/icon_arrow_up"
        android:text="@string/file_explorer_to_parent"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_explorer_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/icon_create_folder"
        android:text="@string/file_explorer_create_folder"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:icon="@drawable/icon_folder_open"
        android:text="@string/file_explorer_select_folder"
        tools:ignore="TextContrastCheck" />

</LinearLayout>