<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="@dimen/big_padding"
        tools:context=".auth.Register">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/biggest_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:autofillHints="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bigger_margin"
            android:ems="10"
            android:hint="@string/hint_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:autofillHints="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bigger_margin"
            android:ems="10"
            android:hint="@string/hint_alias"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:minHeight="50dp"
            android:autofillHints="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@android:color/holo_blue_dark"
            android:paddingLeft="@dimen/default_padding"
            android:paddingTop="@dimen/small_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/register_button"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck|TextContrastCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_alias" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Register_to_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/to_login"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Register_to_Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bigger_margin"
            android:text="@string/to_reset"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Register_to_Login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>